--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,9 +41,9 @@ jobs:
           echo DB01_S3_PROTOCOL=${{ secrets.DB01_S3_PROTOCOL }} >> .env
           echo DB01_S3_CERT_SKIP_VERIFY=${{ secrets.DB01_S3_CERT_SKIP_VERIFY }} >> .env
           echo WEB_IMAGE_ECR=${{ secrets.WEB_IMAGE_ECR }} >> .env
-          echo WEB_PORT=${{ secrets.WEB_PORT }} >> .env
+          echo WEB_PORT=${{ vars.WEB_PORT }} >> .env
           echo WEB_BASE_URL=${{vars.WEB_BASE_URL}} >> .env
           echo ADMIN_BASE_URL=${{ vars.ADMIN_BASE_URL }} >> .env
           cat .env
           cp .env apps/web/.env
-          bash ./push-image.sh web ${{ secrets.WEB_IMAGE_ECR }} us-east-1 ${{ secrets.WEB_PORT }}
+          bash ./push-image.sh web ${{ secrets.WEB_IMAGE_ECR }} us-east-1 ${{ vars.WEB_PORT }}
