--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,7 +1,4 @@
 FROM node:18-alpine AS base
-ARG APP_NAME=""
-ARG PORT=""
-
 RUN npm install -g pnpm
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
@@ -14,7 +11,7 @@ RUN apk update
 # Set working directory
 WORKDIR /app
 COPY . .
-RUN turbo prune --scope=${APP_NAME} --docker
+RUN turbo prune --scope=web --docker
 
 # Add lockfile and package.json's of isolated subworkspace
 FROM base AS installer
@@ -29,7 +26,7 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install
 
 # Build the project
 COPY --from=builder /app/out/full/ .
-RUN pnpm dlx turbo run build --filter=${APP_NAME}
+RUN pnpm dlx turbo run build --filter=web
 
 FROM base AS runner
 WORKDIR /app
@@ -39,19 +36,19 @@ RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 USER nextjs
 
-COPY --from=installer /app/apps/${APP_NAME}/next.config.js .
-COPY --from=installer /app/apps/${APP_NAME}/package.json .
+COPY --from=installer /app/apps/web/next.config.js .
+COPY --from=installer /app/apps/web/package.json .
 
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/web/advanced-features/output-file-tracing
-COPY --from=installer --chown=nextjs:nodejs /app/apps/${APP_NAME}/.next/standalone ./
-COPY --from=installer --chown=nextjs:nodejs /app/apps/${APP_NAME}/.next/static ./apps/${APP_NAME}/.next/static
-COPY --from=installer --chown=nextjs:nodejs /app/apps/${APP_NAME}/public ./apps/${APP_NAME}/public
+COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/standalone ./
+COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/static ./apps/web/.next/static
+COPY --from=installer --chown=nextjs:nodejs /app/apps/web/public ./apps/web/public
 
 COPY --from=installer --chown=nextjs:nodejs /app/packages/database/prisma ./packages/database/prisma
-COPY --from=installer --chown=nextjs:nodejs /app/apps/${APP_NAME}/migrateandstart.sh ./apps/${APP_NAME}
+COPY --from=installer --chown=nextjs:nodejs /app/apps/web/migrateandstart.sh ./apps/web
 
-RUN chmod +x /app/apps/${APP_NAME}/migrateandstart.sh
+RUN chmod +x /app/apps/web/migrateandstart.sh
 
 # Create and set permissions for /pnpm
 USER root
@@ -63,10 +60,8 @@ RUN pnpm install -g dotenv dotenv-cli prisma kysely prisma-kysely
 
 ENV NODE_ENV production
 
-EXPOSE ${PORT}
+EXPOSE 3000
 
-ENV PORT ${PORT}
+ENV PORT 3000
 
-CMD HOSTNAME="0.0.0.0" node apps/${APP_NAME}/server.js
-
-# CMD ["./apps/web/migrateandstart.sh"]
+CMD ["./apps/web/migrateandstart.sh"]
