--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -70,11 +70,13 @@ ENV PORT ${PORT}
 RUN ls -lh
 RUN cd apps
 RUN ls -lh
+RUN cd apps
+RUN ls -lh
 RUN cd web
 RUN ls -lh
 RUN cd ..
 RUN cd ..
 
-CMD HOSTNAME="0.0.0.0" node apps/web/server.js
+CMD HOSTNAME="0.0.0.0" node apps/apps/web/server.js
 
 # CMD ["./apps/web/migrateandstart.sh"]
