--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,4 +46,4 @@ jobs:
           echo ADMIN_BASE_URL=${{ vars.ADMIN_BASE_URL }} >> .env
           cat .env
           cp .env apps/web/.env
-          bash ./push-image.sh web ${{ secrets.WEB_IMAGE_ECR }} us-east-1 ${{ vars.WEB_PORT }}
+          bash ./push-image.sh web ${{ secrets.WEB_IMAGE_ECR }} us-east-1 ${{ vars.WEB_PORT }} next
