--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,6 +56,7 @@ services:
 
   web:
     image: ${WEB_IMAGE_ECR}:latest
+    container_name: ecommerce-mono-web
     pull_policy: always
     restart: always
     networks:
