--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,11 +48,11 @@ jobs:
           cp .env apps/web/.env
           bash ./push-image.sh web ${{ secrets.WEB_IMAGE_ECR }} us-east-1 ${{ vars.WEB_PORT }} next
 
-          # Runs a set of commands using the runners shell
+  
       - name: Run a multi-line script
         run: |
           mkdir ../build
-          cp -TR docker-compose.yml ../build
+          cp -TR docker-compose.yaml ../build
           cp -TR .env ../build
           tar -cvf deploy.tar ../build/
 
