--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -54,6 +54,7 @@ jobs:
           mkdir -p ../build
           cp docker-compose.yaml ../build/
           cp .env ../build/
+          cp ecr-login.sh ../build/
           tar -cvf deploy.tar ../build/
 
       - name: Create working directory
