--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -95,5 +95,6 @@ jobs:
             cd /root/ecommerce-mono
             tar -xf deploy.tar
             cd /build
+            chmod +x ecr-login.sh
             bash ./ecr-login.sh ${{ secrets.WEB_IMAGE_ECR }} us-east-1
             docker compose up -d
