--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,8 +65,8 @@ services:
       - path: ./.env
     ports:
       - ${WEB_PORT}:${WEB_PORT}
-    depends_on:
-      - 'db'
+    # depends_on:
+    #   - 'db'
 
 networks:
   caddy_network:
