--- a/packages/kafka/package.json
+++ b/packages/kafka/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/features",
+  "name": "@repo/kafka",
   "version": "0.2.0",
   "private": true,
   "main": "./dist/index.js",
@@ -17,12 +17,9 @@
     "@kafkajs/confluent-schema-registry": "^3.3.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "kafkajs": "^2.2.4",
-    "kysely": "^0.27.3",
-    "zod": "^3.23.8"
+    "kafkajs": "^2.2.4"
   },
   "devDependencies": {
-    "@repo/kafka": "workspace:^",
     "@repo/auth": "workspace:^",
     "@repo/database": "workspace:^",
     "@repo/eslint-config": "workspace:^",
