--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -61,6 +61,7 @@ services:
     restart: always
     networks:
       - caddy_network
+      - kafka-net
     env_file:
       - path: ./.env
     ports:
@@ -68,74 +69,144 @@ services:
     depends_on:
       - db
 
-  zoo1:
-    image: confluentinc/cp-zookeeper:7.3.2
-    hostname: ${ZOO1_NAME}
-    container_name: ecommerce-mono-${ZOO1_NAME}
-    ports:
-      - "${ZOO1_PORT_EXTERNAL}:2181"
+  zookeeper-1:
+    image: confluentinc/cp-zookeeper:latest
+    hostname: zoo1
     environment:
-      ZOOKEEPER_CLIENT_PORT: ${ZOO1_PORT_EXTERNAL}
       ZOOKEEPER_SERVER_ID: 1
-      ZOOKEEPER_SERVERS: ${ZOO1_NAME}:2888:3888
-
-  kafka1:
-    image: confluentinc/cp-kafka:7.3.2
-    hostname: ecommerce-mono-kafka1
-    container_name: ecommerce-mono-kafka1
+      ZOOKEEPER_CLIENT_PORT: 22181
+      ZOOKEEPER_TICK_TIME: 2000
+      ZOOKEEPER_INIT_LIMIT: 5
+      ZOOKEEPER_SYNC_LIMIT: 2
+      ZOOKEEPER_SERVERS: zoo1:22888:23888
     ports:
-      - "${KAFKA1_PORT_EXTERNAL}:9092"
-      - "${KAFKA1_PORT_EXTERNAL_2}:29092"
+      - "22181:22181"   # Expose Zookeeper client port
+      # - "22888:22888"   # Expose Zookeeper quorum port
+      # - "23888:23888"   # Expose Zookeeper election port
+    extra_hosts:
+      - "moby:127.0.0.1"
+    networks:
+      - caddy_network
+
+  # zookeeper-2:
+  #   image: confluentinc/cp-zookeeper:latest
+  #   environment:
+  #     ZOOKEEPER_SERVER_ID: 2
+  #     ZOOKEEPER_CLIENT_PORT: 32181
+  #     ZOOKEEPER_TICK_TIME: 2000
+  #     ZOOKEEPER_INIT_LIMIT: 5
+  #     ZOOKEEPER_SYNC_LIMIT: 2
+  #     ZOOKEEPER_SERVERS: localhost:22888:23888;localhost:32888:33888;localhost:42888:43888
+  #   # network_mode: host
+  #   ports:
+  #     - "32181:32181"   # Expose Zookeeper client port
+  #     - "32888:32888"   # Expose Zookeeper quorum port
+  #     - "33888:33888"   # Expose Zookeeper election port
+  #   extra_hosts:
+  #     - "moby:127.0.0.1"
+  #   networks:
+  #     - kafka-net
+
+  # zookeeper-3:
+  #   image: confluentinc/cp-zookeeper:latest
+  #   environment:
+  #     ZOOKEEPER_SERVER_ID: 3
+  #     ZOOKEEPER_CLIENT_PORT: 42181
+  #     ZOOKEEPER_TICK_TIME: 2000
+  #     ZOOKEEPER_INIT_LIMIT: 5
+  #     ZOOKEEPER_SYNC_LIMIT: 2
+  #     ZOOKEEPER_SERVERS: localhost:22888:23888;localhost:32888:33888;localhost:42888:43888
+  #   # network_mode: host
+  #   ports:
+  #     - "42181:42181"   # Expose Zookeeper client port
+  #     - "42888:42888"   # Expose Zookeeper quorum port
+  #     - "43888:43888"   # Expose Zookeeper election port
+  #   extra_hosts:
+  #     - "moby:127.0.0.1"
+  #   networks:
+  #     - kafka-net
+
+  kafka-ssl-1:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper-1
+      # - zookeeper-2
+      # - zookeeper-3
     environment:
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://ecommerce-mono-kafka1:9092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:${KAFKA1_PORT_EXTERNAL},DOCKER://host.docker.internal:${KAFKA1_PORT_DOCKER}
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "${ZOO1_NAME}:${ZOO1_PORT_EXTERNAL}"
       KAFKA_BROKER_ID: 1
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-      KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.authorizer.AclAuthorizer
-      KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: "true"
-    depends_on:
-      - ${ZOO1_NAME}
-
-  kafka2:
-    image: confluentinc/cp-kafka:7.3.2
-    hostname: ecommerce-mono-kafka2
-    container_name: ecommerce-mono-kafka2
+      KAFKA_ZOOKEEPER_CONNECT: zoo1:22181
+      KAFKA_ADVERTISED_LISTENERS: SSL://${DOCKER_HOST_IP:-127.0.0.1}:19092
+      KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker1.keystore.jks
+      KAFKA_SSL_KEYSTORE_CREDENTIALS: broker1_keystore_creds
+      KAFKA_SSL_KEY_CREDENTIALS: broker1_sslkey_creds
+      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker1.truststore.jks
+      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker1_truststore_creds
+      KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
+      KAFKA_SSL_CLIENT_AUTH: requested
+      KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
+    volumes:
+      - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
     ports:
-      - "${KAFKA2_PORT_EXTERNAL}:9092"
-      - "${KAFKA2_PORT_EXTERNAL_2}:29092"
+      - "19092:19092" 
+    extra_hosts:
+      - "moby:127.0.0.1"
+    networks:
+      - kafka-net
+
+  kafka-ssl-2:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper-1
+      # - zookeeper-2
+      # - zookeeper-3
     environment:
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://ecommerce-mono-kafka2:9092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:${KAFKA2_PORT_EXTERNAL},DOCKER://host.docker.internal:${KAFKA2_PORT_DOCKER}
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "${ZOO1_NAME}:${ZOO1_PORT_EXTERNAL}"
       KAFKA_BROKER_ID: 2
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-      KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.authorizer.AclAuthorizer
-      KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: "true"
-    depends_on:
-      - ${ZOO1_NAME}
-
-  kafka3:
-    image: confluentinc/cp-kafka:7.3.2
-    hostname: ecommerce-mono-kafka3
-    container_name: ecommerce-mono-kafka3
+      KAFKA_ZOOKEEPER_CONNECT: zoo1:22181
+      KAFKA_ADVERTISED_LISTENERS: SSL://${DOCKER_HOST_IP:-127.0.0.1}:29092
+      KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker2.keystore.jks
+      KAFKA_SSL_KEYSTORE_CREDENTIALS: broker2_keystore_creds
+      KAFKA_SSL_KEY_CREDENTIALS: broker2_sslkey_creds
+      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker2.truststore.jks
+      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker2_truststore_creds
+      KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
+      KAFKA_SSL_CLIENT_AUTH: requested
+      KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
+    volumes:
+      - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
     ports:
-      - "${KAFKA3_PORT_EXTERNAL}:9092"
-      - "${KAFKA3_PORT_EXTERNAL_2}:29092"
-    environment:
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://ecommerce-mono-kafka3:9092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:${KAFKA3_PORT_EXTERNAL},DOCKER://host.docker.internal:${KAFKA3_PORT_DOCKER}
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "${ZOO1_NAME}:${ZOO1_PORT_EXTERNAL}"
-      KAFKA_BROKER_ID: 3
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-      KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.authorizer.AclAuthorizer
-      KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: "true"
+      - "29092:29092" 
+    extra_hosts:
+      - "moby:127.0.0.1"
+    networks:
+      - kafka-net
+
+  kafka-ssl-3:
+    image: confluentinc/cp-kafka:latest
     depends_on:
-      - ${ZOO1_NAME}
-      
+      - zookeeper-1
+      # - zookeeper-2
+      # - zookeeper-3
+    environment:
+      KAFKA_BROKER_ID: 3
+      KAFKA_ZOOKEEPER_CONNECT: zoo1:22181
+      KAFKA_ADVERTISED_LISTENERS: SSL://${DOCKER_HOST_IP:-127.0.0.1}:39092
+      KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker3.keystore.jks
+      KAFKA_SSL_KEYSTORE_CREDENTIALS: broker3_keystore_creds
+      KAFKA_SSL_KEY_CREDENTIALS: broker3_sslkey_creds
+      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker3.truststore.jks
+      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker3_truststore_creds
+      KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
+      KAFKA_SSL_CLIENT_AUTH: requested
+      KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
+    volumes:
+      - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
+    ports:
+      - "39092:39092"   # Expose Kafka broker SSL port
+    extra_hosts:
+      - "moby:127.0.0.1"
+    networks:
+      - kafka-net
+
 networks:
   caddy_network:
     external: true
