--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:^",
-    
+    "@types/node": "^20.14.12",
     "@repo/typescript-config": "workspace:^",
     "@repo/shared-types": "workspace:^",
     "@swc/core": "^1.4.12",
