--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,6 +44,8 @@ jobs:
           echo WEB_PORT=${{ vars.WEB_PORT }} >> .env
           echo WEB_BASE_URL=${{vars.WEB_BASE_URL}} >> .env
           echo ADMIN_BASE_URL=${{ vars.ADMIN_BASE_URL }} >> .env
+          echo KAFKA_PASSPHRASE=${{ secrets.KAFKA_PASSPHRASE }} >> .env
+          echo KAFKA_SSL_SECRETS_DIR=${{ vars.KAFKA_SSL_SECRETS_DIR }} >> .env
           cat .env
           cp .env apps/web/.env
           bash ./push-image.sh web ${{ secrets.WEB_IMAGE_ECR }} us-east-1 ${{ vars.WEB_PORT }} next
