--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,17 +48,17 @@ jobs:
           echo KAFKA_SSL_SECRETS_DIR=${{ vars.KAFKA_SSL_SECRETS_DIR }} >> .env
           cat .env
           cp .env apps/web/.env
-          mkdir -p infra/zoo-kafka/secrets
-          touch ./infra/zoo-kafka/secrets/kafka.producer.CARoot.pem
-          echo ${{ vars.KAFKA_CA }} >> ./infra/zoo-kafka/secrets/kafka.producer.CARoot.pem
-          cat ./infra/zoo-kafka/secrets/kafka.producer.CARoot.pem
-          touch ./infra/zoo-kafka/secrets/kafka.producer.RSAkey.pem
-          echo ${{ vars.KAFKA_RSA }} >> ./infra/zoo-kafka/secrets/kafka.producer.RSAkey.pem
-          cat ./infra/zoo-kafka/secrets/kafka.producer.RSAkey.pem
-          touch ./infra/zoo-kafka/secrets/kafka.producer.certificate.pem
-          echo ${{ vars.KAFKA_CERT }} >> ./infra/zoo-kafka/secrets/kafka.producer.certificate.pem
-          cat ./infra/zoo-kafka/secrets/kafka.producer.certificate.pem
-          bash ./push-image.sh web ${{ secrets.WEB_IMAGE_ECR }} us-east-1 ${{ vars.WEB_PORT }} next
+          mkdir -p ${{vars.KAFKA_SSL_SECRETS_DIR}}
+          touch ${{vars.KAFKA_SSL_SECRETS_DIR}}/kafka.producer.CARoot.pem
+          echo ${{ vars.KAFKA_CA }} >> ${{vars.KAFKA_SSL_SECRETS_DIR}}/kafka.producer.CARoot.pem
+          cat ${{vars.KAFKA_SSL_SECRETS_DIR}}/kafka.producer.CARoot.pem
+          touch ${{vars.KAFKA_SSL_SECRETS_DIR}}/kafka.producer.RSAkey.pem
+          echo ${{ vars.KAFKA_RSA }} >> ${{vars.KAFKA_SSL_SECRETS_DIR}}/kafka.producer.RSAkey.pem
+          cat ${{vars.KAFKA_SSL_SECRETS_DIR}}/kafka.producer.RSAkey.pem
+          touch ${{vars.KAFKA_SSL_SECRETS_DIR}}/kafka.producer.certificate.pem
+          echo ${{ vars.KAFKA_CERT }} >> ${{vars.KAFKA_SSL_SECRETS_DIR}}/kafka.producer.certificate.pem
+          cat ${{vars.KAFKA_SSL_SECRETS_DIR}}/kafka.producer.certificate.pem
+          bash ./push-image.sh web ${{ secrets.WEB_IMAGE_ECR }} us-east-1 ${{ vars.WEB_PORT }} next ${{vars.KAFKA_SSL_SECRETS_DIR}}
   
       - name: Run a multi-line script
         run: |
