--- a/tooling/docker/next/Dockerfile
+++ b/tooling/docker/next/Dockerfile
@@ -25,7 +25,7 @@ WORKDIR /app
 
 # First install the dependencies (as they change less often)
 RUN ls -lh
-COPY --from=builder /app/${KAFKA_SSL_SECRETS_DIR} .
+COPY --from=builder /app/${KAFKA_SSL_SECRETS_DIR} ${KAFKA_SSL_SECRETS_DIR}
 RUN ls -lh
 COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
