--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,6 +25,7 @@ jobs:
       - name: Set up env
         run: |
           touch .env
+          echo NODE_ENV=production >> .env
           echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .env
           echo DATABASE_URL_PROD=${{ secrets.DATABASE_URL_PROD }} >> .env
           echo PG_HOST=${{ secrets.PG_HOST }} >> .env
