--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -108,7 +108,7 @@ services:
     extra_hosts:
       - "moby:127.0.0.1"
     networks:
-      - caddy_network
+      - kafka-net
 
   # zookeeper-2:
   #   image: confluentinc/cp-zookeeper:latest
