--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -110,6 +110,28 @@ services:
     networks:
       - kafka-net
 
+  # init-kafka:
+  #   image: confluentinc/cp-zookeeper:latest
+  #   depends_on:
+  #     - kafka-ssl-1
+  #     - kafka-ssl-2
+  #     - kafka-ssl-3
+  #   entrypoint: [ '/bin/sh', '-c' ]
+  #   command: |
+  #     "
+  #     # blocks until kafka is reachable
+  #     kafka-topics --bootstrap-server localhost:19092 --list
+
+  #     echo -e 'Creating kafka topics'
+  #     kafka-topics --bootstrap-server localhost:19092 --create --if-not-exists --topic ecommercemonoEmailSend --replication-factor 1 --partitions 1
+  #     kafka-topics --bootstrap-server localhost:19092 --create --if-not-exists --topic ecommercemonoEmailSend --replication-factor 1 --partitions 1
+
+  #     echo -e 'Successfully created the following topics:'
+  #     kafka-topics --bootstrap-server localhost:19092 --list
+  #     "
+  #   networks:
+  #     - kafka-net
+
   # zookeeper-2:
   #   image: confluentinc/cp-zookeeper:latest
   #   environment:
@@ -168,6 +190,12 @@ services:
       KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
       KAFKA_SSL_CLIENT_AUTH: requested
       KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
+      KAFKA_SSL_TRUSTSTORE_PASSWORD: confluent
+      KAFKA_SSL_KEYSTORE_LOCATION: /etc/kafka/secrets/kafka.producer.keystore.jks
+      KAFKA_SSL_KEYSTORE_PASSWORD: confluent
+      KAFKA_SSL_KEY_PASSWORD: confluent
+      KAFKA_SECURITY_PROTOCOL: SSL
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     volumes:
       - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
     ports:
@@ -177,69 +205,79 @@ services:
     networks:
       - kafka-net
 
-  kafka-ssl-2:
-    image: confluentinc/cp-kafka:latest
-    hostname: kafka2
-    container_name: kafka2
-    depends_on:
-      - zookeeper-1
-      # - zookeeper-2
-      # - zookeeper-3
-    environment:
-      KAFKA_BROKER_ID: 2
-      KAFKA_ZOOKEEPER_CONNECT: zoo1:22181
-      KAFKA_ADVERTISED_LISTENERS: SSL://${DOCKER_HOST_IP:-127.0.0.1}:29092
-      KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker2.keystore.jks
-      KAFKA_SSL_KEYSTORE_CREDENTIALS: broker2_keystore_creds
-      KAFKA_SSL_KEY_CREDENTIALS: broker2_sslkey_creds
-      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker2.truststore.jks
-      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker2_truststore_creds
-      KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
-      KAFKA_SSL_CLIENT_AUTH: requested
-      KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
-    volumes:
-      - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
-    ports:
-      - "29092:29092" 
-    extra_hosts:
-      - "moby:127.0.0.1"
-    networks:
-      - kafka-net
+  # kafka-ssl-2:
+  #   image: confluentinc/cp-kafka:latest
+  #   hostname: kafka2
+  #   container_name: kafka2
+  #   depends_on:
+  #     - zookeeper-1
+  #     # - zookeeper-2
+  #     # - zookeeper-3
+  #   environment:
+  #     KAFKA_BROKER_ID: 2
+  #     KAFKA_ZOOKEEPER_CONNECT: zoo1:22181
+  #     KAFKA_ADVERTISED_LISTENERS: SSL://${DOCKER_HOST_IP:-127.0.0.1}:29092
+  #     KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker2.keystore.jks
+  #     KAFKA_SSL_KEYSTORE_CREDENTIALS: broker2_keystore_creds
+  #     KAFKA_SSL_KEY_CREDENTIALS: broker2_sslkey_creds
+  #     KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker2.truststore.jks
+  #     KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker2_truststore_creds
+  #     KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
+  #     KAFKA_SSL_CLIENT_AUTH: requested
+  #     KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
+  #     KAFKA_SSL_TRUSTSTORE_PASSWORD: confluent
+  #     KAFKA_SSL_KEYSTORE_LOCATION: /etc/kafka/secrets/kafka.producer.keystore.jks
+  #     KAFKA_SSL_KEYSTORE_PASSWORD: confluent
+  #     KAFKA_SSL_KEY_PASSWORD: confluent
+  #     KAFKA_SECURITY_PROTOCOL: SSL
+  #   volumes:
+  #     - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
+  #   ports:
+  #     - "29092:29092" 
+  #   extra_hosts:
+  #     - "moby:127.0.0.1"
+  #   networks:
+  #     - kafka-net
 
-  kafka-ssl-3:
-    image: confluentinc/cp-kafka:latest
-    hostname: kafka3
-    container_name: kafka3
-    depends_on:
-      - zookeeper-1
-      # - zookeeper-2
-      # - zookeeper-3
-    environment:
-      KAFKA_BROKER_ID: 3
-      KAFKA_ZOOKEEPER_CONNECT: zoo1:22181
-      KAFKA_ADVERTISED_LISTENERS: SSL://${DOCKER_HOST_IP:-127.0.0.1}:39092
-      KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker3.keystore.jks
-      KAFKA_SSL_KEYSTORE_CREDENTIALS: broker3_keystore_creds
-      KAFKA_SSL_KEY_CREDENTIALS: broker3_sslkey_creds
-      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker3.truststore.jks
-      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker3_truststore_creds
-      KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
-      KAFKA_SSL_CLIENT_AUTH: requested
-      KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
-    volumes:
-      - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
-    ports:
-      - "39092:39092"   # Expose Kafka broker SSL port
-    extra_hosts:
-      - "moby:127.0.0.1"
-    networks:
-      - kafka-net
+  # kafka-ssl-3:
+  #   image: confluentinc/cp-kafka:latest
+  #   hostname: kafka3
+  #   container_name: kafka3
+  #   depends_on:
+  #     - zookeeper-1
+  #     # - zookeeper-2
+  #     # - zookeeper-3
+  #   environment:
+  #     KAFKA_BROKER_ID: 3
+  #     KAFKA_ZOOKEEPER_CONNECT: zoo1:22181
+  #     KAFKA_ADVERTISED_LISTENERS: SSL://${DOCKER_HOST_IP:-127.0.0.1}:39092
+  #     KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker3.keystore.jks
+  #     KAFKA_SSL_KEYSTORE_CREDENTIALS: broker3_keystore_creds
+  #     KAFKA_SSL_KEY_CREDENTIALS: broker3_sslkey_creds
+  #     KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker3.truststore.jks
+  #     KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker3_truststore_creds
+  #     KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
+  #     KAFKA_SSL_CLIENT_AUTH: requested
+  #     KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
+  #     KAFKA_SSL_TRUSTSTORE_PASSWORD: confluent
+  #     KAFKA_SSL_KEYSTORE_LOCATION: /etc/kafka/secrets/kafka.producer.keystore.jks
+  #     KAFKA_SSL_KEYSTORE_PASSWORD: confluent
+  #     KAFKA_SSL_KEY_PASSWORD: confluent
+  #     KAFKA_SECURITY_PROTOCOL: SSL
+  #   volumes:
+  #     - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
+  #   ports:
+  #     - "39092:39092"   # Expose Kafka broker SSL port
+  #   extra_hosts:
+  #     - "moby:127.0.0.1"
+  #   networks:
+  #     - kafka-net
 
 networks:
   caddy_network:
     external: true
   kafka-net:
-    driver: bridge
+    name: kafka-net
 
 volumes:
   caddy_data:
