--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -94,6 +94,7 @@ services:
   zookeeper-1:
     image: confluentinc/cp-zookeeper:latest
     hostname: zoo1
+    restart: always
     environment:
       ZOOKEEPER_SERVER_ID: 1
       ZOOKEEPER_CLIENT_PORT: 22181
@@ -102,82 +103,19 @@ services:
       ZOOKEEPER_SYNC_LIMIT: 2
       ZOOKEEPER_SERVERS: zoo1:22888:23888
     ports:
-      - "22181:22181"   # Expose Zookeeper client port
-      # - "22888:22888"   # Expose Zookeeper quorum port
-      # - "23888:23888"   # Expose Zookeeper election port
+      - "22181:22181"
     extra_hosts:
       - "moby:127.0.0.1"
     networks:
       - kafka-net
 
-  # init-kafka:
-  #   image: confluentinc/cp-zookeeper:latest
-  #   depends_on:
-  #     - kafka-ssl-1
-  #     - kafka-ssl-2
-  #     - kafka-ssl-3
-  #   entrypoint: [ '/bin/sh', '-c' ]
-  #   command: |
-  #     "
-  #     # blocks until kafka is reachable
-  #     kafka-topics --bootstrap-server localhost:19092 --list
-
-  #     echo -e 'Creating kafka topics'
-  #     kafka-topics --bootstrap-server localhost:19092 --create --if-not-exists --topic ecommercemonoEmailSend --replication-factor 1 --partitions 1
-  #     kafka-topics --bootstrap-server localhost:19092 --create --if-not-exists --topic ecommercemonoEmailSend --replication-factor 1 --partitions 1
-
-  #     echo -e 'Successfully created the following topics:'
-  #     kafka-topics --bootstrap-server localhost:19092 --list
-  #     "
-  #   networks:
-  #     - kafka-net
-
-  # zookeeper-2:
-  #   image: confluentinc/cp-zookeeper:latest
-  #   environment:
-  #     ZOOKEEPER_SERVER_ID: 2
-  #     ZOOKEEPER_CLIENT_PORT: 32181
-  #     ZOOKEEPER_TICK_TIME: 2000
-  #     ZOOKEEPER_INIT_LIMIT: 5
-  #     ZOOKEEPER_SYNC_LIMIT: 2
-  #     ZOOKEEPER_SERVERS: localhost:22888:23888;localhost:32888:33888;localhost:42888:43888
-  #   # network_mode: host
-  #   ports:
-  #     - "32181:32181"   # Expose Zookeeper client port
-  #     - "32888:32888"   # Expose Zookeeper quorum port
-  #     - "33888:33888"   # Expose Zookeeper election port
-  #   extra_hosts:
-  #     - "moby:127.0.0.1"
-  #   networks:
-  #     - kafka-net
-
-  # zookeeper-3:
-  #   image: confluentinc/cp-zookeeper:latest
-  #   environment:
-  #     ZOOKEEPER_SERVER_ID: 3
-  #     ZOOKEEPER_CLIENT_PORT: 42181
-  #     ZOOKEEPER_TICK_TIME: 2000
-  #     ZOOKEEPER_INIT_LIMIT: 5
-  #     ZOOKEEPER_SYNC_LIMIT: 2
-  #     ZOOKEEPER_SERVERS: localhost:22888:23888;localhost:32888:33888;localhost:42888:43888
-  #   # network_mode: host
-  #   ports:
-  #     - "42181:42181"   # Expose Zookeeper client port
-  #     - "42888:42888"   # Expose Zookeeper quorum port
-  #     - "43888:43888"   # Expose Zookeeper election port
-  #   extra_hosts:
-  #     - "moby:127.0.0.1"
-  #   networks:
-  #     - kafka-net
-
   kafka-ssl-1:
     image: confluentinc/cp-kafka:latest
     hostname: kafka1
     container_name: kafka1
+    restart: always
     depends_on:
       - zookeeper-1
-      # - zookeeper-2
-      # - zookeeper-3
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zoo1:22181
@@ -204,74 +142,6 @@ services:
       - "moby:127.0.0.1"
     networks:
       - kafka-net
-
-  # kafka-ssl-2:
-  #   image: confluentinc/cp-kafka:latest
-  #   hostname: kafka2
-  #   container_name: kafka2
-  #   depends_on:
-  #     - zookeeper-1
-  #     # - zookeeper-2
-  #     # - zookeeper-3
-  #   environment:
-  #     KAFKA_BROKER_ID: 2
-  #     KAFKA_ZOOKEEPER_CONNECT: zoo1:22181
-  #     KAFKA_ADVERTISED_LISTENERS: SSL://${DOCKER_HOST_IP:-127.0.0.1}:29092
-  #     KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker2.keystore.jks
-  #     KAFKA_SSL_KEYSTORE_CREDENTIALS: broker2_keystore_creds
-  #     KAFKA_SSL_KEY_CREDENTIALS: broker2_sslkey_creds
-  #     KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker2.truststore.jks
-  #     KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker2_truststore_creds
-  #     KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
-  #     KAFKA_SSL_CLIENT_AUTH: requested
-  #     KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
-  #     KAFKA_SSL_TRUSTSTORE_PASSWORD: confluent
-  #     KAFKA_SSL_KEYSTORE_LOCATION: /etc/kafka/secrets/kafka.producer.keystore.jks
-  #     KAFKA_SSL_KEYSTORE_PASSWORD: confluent
-  #     KAFKA_SSL_KEY_PASSWORD: confluent
-  #     KAFKA_SECURITY_PROTOCOL: SSL
-  #   volumes:
-  #     - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
-  #   ports:
-  #     - "29092:29092" 
-  #   extra_hosts:
-  #     - "moby:127.0.0.1"
-  #   networks:
-  #     - kafka-net
-
-  # kafka-ssl-3:
-  #   image: confluentinc/cp-kafka:latest
-  #   hostname: kafka3
-  #   container_name: kafka3
-  #   depends_on:
-  #     - zookeeper-1
-  #     # - zookeeper-2
-  #     # - zookeeper-3
-  #   environment:
-  #     KAFKA_BROKER_ID: 3
-  #     KAFKA_ZOOKEEPER_CONNECT: zoo1:22181
-  #     KAFKA_ADVERTISED_LISTENERS: SSL://${DOCKER_HOST_IP:-127.0.0.1}:39092
-  #     KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker3.keystore.jks
-  #     KAFKA_SSL_KEYSTORE_CREDENTIALS: broker3_keystore_creds
-  #     KAFKA_SSL_KEY_CREDENTIALS: broker3_sslkey_creds
-  #     KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker3.truststore.jks
-  #     KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker3_truststore_creds
-  #     KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
-  #     KAFKA_SSL_CLIENT_AUTH: requested
-  #     KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
-  #     KAFKA_SSL_TRUSTSTORE_PASSWORD: confluent
-  #     KAFKA_SSL_KEYSTORE_LOCATION: /etc/kafka/secrets/kafka.producer.keystore.jks
-  #     KAFKA_SSL_KEYSTORE_PASSWORD: confluent
-  #     KAFKA_SSL_KEY_PASSWORD: confluent
-  #     KAFKA_SECURITY_PROTOCOL: SSL
-  #   volumes:
-  #     - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
-  #   ports:
-  #     - "39092:39092"   # Expose Kafka broker SSL port
-  #   extra_hosts:
-  #     - "moby:127.0.0.1"
-  #   networks:
-  #     - kafka-net
 
 networks:
   caddy_network:
